# LoX

./: .gitignore  CMakeLists.txt
Documentation/: Todo.md
Documentation/Draw-io/: Two-Dimension-To-One-Dimension.xml
Source/: Application.cpp  Character.cpp  Creature.cpp  DieRoll.cpp  ISreen.cpp  Item.cpp  Level.cpp  Main.cpp  MenuScreen.cpp  PlayScreen.cpp  Renderer.cpp  armour.hpp  character.cpp  character.hpp  common.hpp  creature.cpp  creature.hpp  dieroll.cpp  dieroll.hpp  game.cpp  game.hpp  item.cpp  item.hpp  itemlist.hpp  level.cpp  level.hpp  main.cpp  menu_main.cpp  menu_main.hpp  ranged.hpp  renderer.cpp  renderer.hpp  state.cpp  state.hpp  weapon.hpp
Source/Entity/: Entity.cpp
Source/Entity/Enum/: EEntityTypes.hpp
Source/Entity/Include/: Entity.hpp
Source/Include/: Application.hpp  Armour.hpp  BearLibTerminal.h  Character.hpp  Common.hpp  Creature.hpp  DieRoll.hpp  EDirections.hpp  ISreen.hpp  Item.hpp  ItemList.hpp  Level.hpp  MenuScreen.hpp  PlayScreen.hpp  Ranged.hpp  Renderer.hpp  Weapon.hpp
Source/Interface/: ISreen.cpp  ISreen.hpp
Source/Item/: Item.cpp
Source/Item/Enum/: EArmourSlot.hpp  EItemCategories.hpp  EItemCategory.hpp  EItemTypes.hpp
Source/Item/Include/: Armour.hpp  Item.hpp  Ranged.hpp  Weapon.hpp
Source/Math/Include/: Vector2D.hpp
Source/Matrix/: Level.cpp  RealWorld.cpp  TheMatrix.cpp  Tile.cpp
Source/Matrix/Enum/: EMapTiles.hpp  ETypeTiles.hpp
Source/Matrix/Include/: Level.hpp  RealWorld.hpp  TheMatrix.hpp  Tile.hpp
Source/Screen/: MenuScreen.cpp  PlayScreen.cpp
Source/Screen/Include/: MenuScreen.hpp  PlayScreen.hpp
Source/Screen/Interface/: ISreen.cpp  ISreen.hpp
